Fix sidebar position to sitcky (#205)
* fix: fix right-sidebar position to sitcky

* fix: fixed prlblem that social media icons don't display, add scrollbar to right aside

--- a/src/styles/templates/blog.scss
+++ b/src/styles/templates/blog.scss
@@ -268,8 +268,17 @@ $navbar-height-mobile: 4.25rem; // 68px
     }
   }
 
+  .columns {
+    align-items: flex-start;
+  }
+
   .right-column {
-    position: relative;
+    @include tablet {
+      position: sticky;
+      height: 100vh;
+      overflow: scroll;
+      top: 0.625rem;
+    }
   }
 
   .toc {
